k3s_cluster/base/default/dozzle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: default
  labels:
    app: main-dozzle
spec:
  selector:
    matchLabels:
      app: main-dozzle
  template:
    metadata:
      labels:
        app: main-dozzle
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: serviceaccount
      containers:
        - name: dozzle
          image: amir20/dozzle:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
              # readinessProbe:
              #   httpGet:
              #     path: /
              #     port: 8080
              #   initialDelaySeconds: 5
              #   periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
