k3s_cluster/base/default/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-dozzle
spec:
  type: ClusterIP
  selector:
    app: main-dozzle
  ports:
    - name: web
      protocol: TCP
      port: 2215
      targetPort: 8080
