k3s_cluster/base/default/dozzle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  labels:
    app: main-dozzle
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`dozzle.main.home`)
      # middlewares:
      #   - name: main-middleware-auth-authentik
      services:
        - name: main-dozzle-service
          port: 2215
  #tls: {}
