k3s_cluster/base/default/dozzle/linkerd-policies.yaml
# 3. AUTHORIZATIONPOLICY - Binds it all together
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: auth
  namespace: default
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: server
  requiredAuthenticationRefs:
    - name: identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
